// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen transactions config import-export] should create the transactions: the transactions have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ transaction => name: 'cfgObjectTest', type: 'callData', tenant: 'Environment'
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen transactions config import-export] should throw exception when new transactions to import miss mandatory properties transactions: exception has been thrown 1`] = `
Object {
  "stderr": "Cannot import configuration: some configuration objects' mandatory properties for creation are not set.
	Mandatory properties [alias] not set in transaction 'name: 'emptyCfgObjectTest', type: 'callData', tenant: 'Environment''
",
  "stdout": "",
}
`;

exports[`[mutagen transactions config import-export] should update the transactions: the transactions have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ transaction => name: 'cfgObjectTest', type: 'callData', tenant: 'Environment'
Completed. 1 object(s) imported.
",
}
`;
